--- a/src/common/MovieCard/MovieCard.style.css
+++ b/src/common/MovieCard/MovieCard.style.css
@@ -52,3 +52,14 @@
 .under-color{
     color:green;
 }
+
+
+@media(max-width: 480px){
+    .movie-card{
+        width: 176px;
+        height: 263px;
+        background-size: cover;
+        cursor: pointer;
+        transition: 0.5s;
+    }
+}
