--- a/src/index.css
+++ b/src/index.css
@@ -27,4 +27,34 @@ body, html{
   box-shadow: 0 0 5px 1px rgba(255, 193, 7, 0.5) !important;
 }
 
+.drop-area{
+  display: flex;
+  width: 250px;
+  align-items: center;
+  margin-top: 20px;
+  justify-content: space-between;
+}
 
+@media (max-width: 768px) {
+  .movie-card-search-list{
+    justify-content: center;
+    width: 100vw;
+  }
+  .col-movie-card-search{
+    display: flex;
+    justify-content: center;
+  }
+  .pagination {
+    font-size: 8px;
+  }
+  .page-link{
+    width: 20px ;
+    height: 30px;
+    padding: 0;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+}
